# Lumina

./: .gitignore  .gitmodules  CMakeLists.txt
Config/: DefaultConfig.ini
EngineResources/Shaders/: simpleTriangle.frag  simpleTriangle.vert
LuminaEditor/: CMakeLists.txt  LuminaEditor.cpp  LuminaEditorModule.cpp
LuminaEditor/src/: EditorCamera.cpp  EditorCamera.h
LuminaEngine/: CMakeLists.txt  Game.cpp  Game.h  LuminaEngine.h  lepch.h
LuminaEngine/Cameras/: Camera.h  DefaultFlyCamera.cpp  DefaultFlyCamera.h
LuminaEngine/Core/: CerealUtils.h  Config.cpp  Config.h  DirectoryPathnames.h  DynamicLibrary.cpp  DynamicLibrary.h  Engine.cpp  Engine.h  EngineStatics.cpp  EngineStatics.h  EntryPoint.cpp  EntryPoint.h  FileSystem.h  LE_Types.h  Logger.cpp  Logger.h  MathUtils.h  TasksManager.cpp  TasksManager.h  UtilFunctions.h  Window.cpp  Window.h
LuminaEngine/Core/Events/: Event.h  EventHandler.h  EventManager.cpp  EventManager.h  KeyEvent.h  WindowEvent.h
LuminaEngine/Core/Input/: InputManager.cpp  InputManager.h
LuminaEngine/ECS/: ComponentArray.h  ComponentManager.h  Coordinator.h  Entity.h  EntityManager.cpp  EntityManager.h  System.h  SystemManager.h
LuminaEngine/ECS/Components/: ScriptComponent.h  TransformComponent.h
LuminaEngine/Layers/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
LuminaEngine/Platform/Vulkan/: Descriptors.cpp  Descriptors.h  FrameData.cpp  FrameData.h  PerRenderableConstants.h  QueueFamilyIndices.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanContext.h  VulkanImage.cpp  VulkanImage.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRHI.cpp  VulkanRHI.h  VulkanSampler.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanUtils.cpp  VulkanUtils.h
LuminaEngine/Project/: Level.h  Project.cpp  Project.h
LuminaEngine/Rendering/: Buffer.h  GPUMaterialData.h  Image.h  Pipeline.h  RHI.cpp  RHI.h  Renderable.h  Renderer.cpp  Renderer.h  RenderingConstants.h  Sampler.h  SceneData.h  Scenegraph.cpp  Scenegraph.h  Shader.h  VertexInput.h
LuminaEngine/Resource/: AssetRegistry.cpp  AssetRegistry.h  BaseResource.h  InputActionAsset.h  InputActionMappingAsset.cpp  InputActionMappingAsset.h  LoadedGLTF.h  MaterialAsset.h  MeshAsset.h  ResourceManager.cpp  ResourceManager.h  Scene.h  TextureAsset.h
LuminaEngine/Scene/: Scene.h  Scenegraph.cpp  Scenegraph.h
LuminaEngine/Scripting/: ModuleRegistry.cpp  ModuleRegistry.h  NativeScript.cpp  NativeScript.h  ScriptManager.cpp  ScriptManager.h
SampleProject/: CMakeLists.txt  SampleGame.cpp  SampleGame.h  SampleProjectModule.cpp
SampleProject/Source/: PlayerController.cpp  PlayerController.h  SampleGame.cpp  SampleGame.h
